Fix section gap

--- a/assets/css/3-sections/_header.sass
+++ b/assets/css/3-sections/_header.sass
@@ -64,6 +64,7 @@ header
   color: rgba(white,0.8)
   line-height: 1
   padding-bottom: 300px
+  margin-bottom: 0
 
 @media (max-width: 640px)
   header
